samples/_failures_safe/1761656296_be7f96_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0b0619a3.c: In function ‘main’:
./samples/SAFE/__tmp_0b0619a3.c:172:5: error: expected declaration or statement at end of input
  172 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_0b0619a3.c:172:5: error: expected declaration or statement at end of input
